<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.basic.framework</groupId>
		<artifactId>basic-search</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<groupId>com.basic.search.api</groupId>
	<artifactId>basic-search-api</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>Basic-Search-api</name>
	<url>http://maven.apache.org</url>
	<properties>

	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<!-- dubbo -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>dubbo</artifactId>
			<version>${dubbo.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>spring</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib-nodep</artifactId>
			<version>2.2.2</version>
		</dependency>
		<!-- servlet-api -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.18</version>
		</dependency>
		<!-- zookeeper -->
		<dependency>
			<groupId>com.101tec</groupId>
			<artifactId>zkclient</artifactId>
			<version>${zkclient.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.zookeeper</groupId>
			<artifactId>zookeeper</artifactId>
			<version>${zookeeper.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- ons need -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.8</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>${fastjson.version}</version>
		</dependency>
		<dependency>
			<groupId>guava</groupId>
			<artifactId>guava</artifactId>
			<version>18.0</version>
		</dependency>
		<dependency>
			<groupId>jms</groupId>
			<artifactId>jms-api</artifactId>
			<version>1.1-rev-1</version>
		</dependency>
		<dependency>
			<groupId>netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.0.33.Final</version>
		</dependency>
		<!-- ons need end -->

		<dependency>
			<groupId>se.jiderhamn</groupId>
			<artifactId>classloader-leak-prevention</artifactId>
			<version>1.15.2</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.2</version>
		</dependency>
		<!-- solr -->
		<dependency>
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-core</artifactId>
			<version>${solr.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-solrj</artifactId>
			<version>${solr.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<!-- log -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.0.6</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.2</version>
			<exclusions>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.23</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<!-- solr ext end -->
		
		<dependency>
			<groupId>com.belerweb</groupId>
			<artifactId>pinyin4j</artifactId>
			<version>2.5.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.alibaba.rocketmq/rocketmq-client -->
		<dependency>
			<groupId>com.alibaba.rocketmq</groupId>
			<artifactId>rocketmq-client</artifactId>
			<version>3.6.2.Final</version>
		</dependency>

    </dependencies>
	<packaging>war</packaging>
	<profiles>
		<profile>
			<!-- 本地环境 -->
			<id>local</id>
			<properties>
				<redis.host>10.10.14.193</redis.host>
				<redis.port>6380</redis.port>
				<redis.password>Lsmy2016</redis.password>
				<redis.timeout>360000</redis.timeout>
				<redis.pool.minIdle>5</redis.pool.minIdle>
				<redis.pool.maxIdle>20</redis.pool.maxIdle>
				<redis.pool.maxTotal>100</redis.pool.maxTotal>
				<zookeeper.server>10.10.14.196:2181</zookeeper.server>
				<dubbo.host></dubbo.host>
				<dubbo.port>13205</dubbo.port>
				<jdbc.url>10.10.14.193:3306/lsmyb2cdev</jdbc.url>
				<jdbc.user>linshimuyesql</jdbc.user>
				<jdbc.passwd>linshi_2016</jdbc.passwd>
				<jdbc.initialSize>1</jdbc.initialSize>
				<jdbc.maxActive>5</jdbc.maxActive>
				<jdbc.maxWait>5000</jdbc.maxWait>
				<jdbc.maxIdle>5</jdbc.maxIdle>
				<ons.suffix>_ONS_DEV</ons.suffix>
				<search.producerId>PID_LSMY_B2C_SEARCH</search.producerId>
				<search.consumerId>CID_LSMY_B2C_SEARCH</search.consumerId>
				<!-- 
				<search.topic>LSMY_B2C_P_SEARCH_TOPGOODS</search.topic>
				<ons.topic>LSMY_B2C_P_IC_GOODS</ons.topic>
				 -->
				<search.topic>LSMY_B2C_P_IC_MESSAGE</search.topic>
				
				<consumeThreadNums>100</consumeThreadNums>
				<accessKey>LTAI03Y5mtfY7LOt</accessKey>
				<secretKey>wP1vWgTE5wBc7W8rsMKbhUMwNSHaQR</secretKey>
				<rockmq.namesrvAddr>10.10.14.196:9876;10.10.14.198:9876</rockmq.namesrvAddr>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		<profile>
			<!-- lsmydevnew环境 -->
			<id>lsmydevnew</id>
			<properties>
				<redis.host>redis.master.lsmy.com</redis.host>
				<redis.port>6380</redis.port>
				<redis.password>Lsmy2016</redis.password>
				<redis.timeout>360000</redis.timeout>
				<redis.pool.minIdle>5</redis.pool.minIdle>
				<redis.pool.maxIdle>20</redis.pool.maxIdle>
				<redis.pool.maxTotal>100</redis.pool.maxTotal>
				<zookeeper.server>zookeeper.server1.lsmy.com:2181</zookeeper.server>
				<dubbo.host></dubbo.host>
				<dubbo.port>13205</dubbo.port>
				<jdbc.url>mysql.master.lsmy.com:3306,mysql.master.lsmy.com:3306/lsmyb2cdev</jdbc.url>
				<jdbc.user>linshimuyesql</jdbc.user>
				<jdbc.passwd>linshi_2016</jdbc.passwd>
				<jdbc.initialSize>1</jdbc.initialSize>
				<jdbc.maxActive>5</jdbc.maxActive>
				<jdbc.maxWait>5000</jdbc.maxWait>
				<jdbc.maxIdle>3</jdbc.maxIdle>
				<ons.suffix>_ONS_DEV</ons.suffix>
				<search.producerId>PID_LSMY_B2C_SEARCH</search.producerId>
				<search.consumerId>CID_LSMY_B2C_SEARCH</search.consumerId>
				<!-- 
				<search.topic>LSMY_B2C_P_SEARCH_TOPGOODS</search.topic>
				<ons.topic>LSMY_B2C_P_IC_GOODS</ons.topic>
				 -->
				<search.topic>LSMY_B2C_P_IC_MESSAGE</search.topic>
				
				<consumeThreadNums>100</consumeThreadNums>
				<accessKey>LTAI03Y5mtfY7LOt</accessKey>
				<secretKey>wP1vWgTE5wBc7W8rsMKbhUMwNSHaQR</secretKey>
				<rockmq.namesrvAddr>10.10.14.196:9876;10.10.14.198:9876</rockmq.namesrvAddr>
			</properties>
		</profile>
		<profile>
			<!-- lsmysit环境 -->
			<id>lsmysit</id>
			<properties>
				<redis.host>redis.master.lsmy.com</redis.host>
				<redis.port>6379</redis.port>
				<redis.password>Lsmy2016</redis.password>
				<redis.timeout>360000</redis.timeout>
				<redis.pool.minIdle>5</redis.pool.minIdle>
				<redis.pool.maxIdle>20</redis.pool.maxIdle>
				<redis.pool.maxTotal>100</redis.pool.maxTotal>
				<zookeeper.server>zookeeper.server1.lsmy.com:2181</zookeeper.server>
				<dubbo.host></dubbo.host>
				<dubbo.port>13205</dubbo.port>
				<jdbc.url>mysql.master.lsmy.com:3306/lsmyb2csit</jdbc.url>
				<jdbc.user>linshimuyesql</jdbc.user>
				<jdbc.passwd>linshi_2016</jdbc.passwd>
				<jdbc.initialSize>10</jdbc.initialSize>
				<jdbc.maxActive>100</jdbc.maxActive>
				<jdbc.maxWait>3000</jdbc.maxWait>
				<jdbc.maxIdle>10</jdbc.maxIdle>
				<ons.suffix>_ONS_SIT</ons.suffix>
				<search.producerId>PID_LSMY_B2C_SEARCH</search.producerId>
				<search.consumerId>CID_LSMY_B2C_SEARCH</search.consumerId>
				<!-- 
				<search.topic>LSMY_B2C_P_SEARCH_TOPGOODS</search.topic>
				<ons.topic>LSMY_B2C_P_IC_GOODS</ons.topic>
				 -->
				<search.topic>LSMY_B2C_P_IC_MESSAGE</search.topic>
				
				<consumeThreadNums>10</consumeThreadNums>
				<accessKey>LTAI03Y5mtfY7LOt</accessKey>
				<secretKey>wP1vWgTE5wBc7W8rsMKbhUMwNSHaQR</secretKey>
				<rockmq.namesrvAddr>10.10.14.196:9876;10.10.14.198:9876</rockmq.namesrvAddr>
			</properties>
		</profile>
		<profile>
			<!-- online环境 -->
			<id>online</id>
			<properties>
				<redis.host>r-wz9b7d3b8e37d6a4.redis.rds.aliyuncs.com</redis.host>
				<redis.port>6379</redis.port>
				<redis.timeout>360000</redis.timeout>
				<redis.password>pom_online_redis_passwd</redis.password>
				<redis.pool.minIdle>5</redis.pool.minIdle>
				<redis.pool.maxIdle>20</redis.pool.maxIdle>
				<redis.pool.maxTotal>100</redis.pool.maxTotal>
				<zookeeper.server>zookeeper.server1.lsmy.com:2181</zookeeper.server>
				<dubbo.host></dubbo.host>
				<dubbo.port>13205</dubbo.port>
				<jdbc.url>rm-wz96htl860043bfb4.mysql.rds.aliyuncs.com:3306,rm-wz96htl860043bfb4.mysql.rds.aliyuncs.com:3306/lsmyb2c</jdbc.url>
				<jdbc.user>linshimuyesql</jdbc.user>
				<jdbc.passwd>pom_online_jdbc_passwd</jdbc.passwd>
				<jdbc.initialSize>10</jdbc.initialSize>
				<jdbc.maxActive>100</jdbc.maxActive>
				<jdbc.maxWait>3000</jdbc.maxWait>
				<jdbc.maxIdle>10</jdbc.maxIdle>
				<ons.suffix></ons.suffix>
				<search.producerId>PID_LSMY_B2C_SEARCH</search.producerId>
				<search.consumerId>CID_LSMY_B2C_SEARCH</search.consumerId>
				<!-- 
				<search.topic>LSMY_B2C_P_SEARCH_TOPGOODS</search.topic>
				<ons.topic>LSMY_B2C_P_IC_GOODS</ons.topic>
				 -->
				<search.topic>LSMY_B2C_P_IC_MESSAGE</search.topic>
				
				<consumeThreadNums>10</consumeThreadNums>
				<accessKey>pom_online_ons_accesskey</accessKey>
				<secretKey>pom_online_ons_secretkey</secretKey>
				<rockmq.namesrvAddr>10.24.167.15:9876;10.24.245.143:9876</rockmq.namesrvAddr>
			</properties>
		</profile>
		<profile>
			<!-- lsmyprep环境 -->
			<id>lsmyprep</id>
			<properties>
				<redis.host>redis.master.lsmy.com</redis.host>
				<redis.port>6379</redis.port>
				<redis.password>Lsmy2016</redis.password>
				<redis.timeout>360000</redis.timeout>
				<redis.pool.minIdle>5</redis.pool.minIdle>
				<redis.pool.maxIdle>20</redis.pool.maxIdle>
				<redis.pool.maxTotal>100</redis.pool.maxTotal>
				<zookeeper.server>zookeeper-prep.server.lsmy.com:2181</zookeeper.server>
				<dubbo.host></dubbo.host>
				<jdbc.url>rm-wz93ia5fg8250u334.mysql.rds.aliyuncs.com:3306,rm-wz93ia5fg8250u334.mysql.rds.aliyuncs.com:3306/lsmyb2c</jdbc.url>
				<jdbc.user>linshimuyesql</jdbc.user>
				<jdbc.passwd>KbdptkB4wgqbwpVS</jdbc.passwd>
				<jdbc.initialSize>1</jdbc.initialSize>
				<jdbc.maxActive>5</jdbc.maxActive>
				<jdbc.maxWait>5000</jdbc.maxWait>
				<jdbc.maxIdle>3</jdbc.maxIdle>
				<ons.suffix>_ONS_PREP</ons.suffix>
				<search.producerId>PID_LSMY_B2C_SEARCH</search.producerId>
				<search.consumerId>CID_LSMY_B2C_SEARCH</search.consumerId>
				<!-- 
				<search.topic>LSMY_B2C_P_SEARCH_TOPGOODS</search.topic>
				<ons.topic>LSMY_B2C_P_IC_GOODS</ons.topic>
				 -->
				<search.topic>LSMY_B2C_P_IC_MESSAGE</search.topic>
				
				<consumeThreadNums>100</consumeThreadNums>
				<accessKey>LTAI03Y5mtfY7LOt</accessKey>
				<secretKey>wP1vWgTE5wBc7W8rsMKbhUMwNSHaQR</secretKey>
				<rockmq.namesrvAddr>10.24.167.15:9876;10.24.245.143:9876</rockmq.namesrvAddr>
			</properties>
		</profile>

	</profiles>


	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<finalName>b2c-search-api</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<encoding>utf-8</encoding>
					<source>1.8</source>
					<target>1.8</target>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.5</version>
				<configuration>
					<contextPath>/</contextPath>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>9045</port>
						</connector>
					</connectors>
					<systemProperties>
						<systemProperty>
							<name>MAVEN_OPTS</name>
							<value>"-Xms512m -Xmx1024m -XX:MaxPermSize=128m"</value>
						</systemProperty>
						<systemProperty>
							<name>JVM-ARG</name>
							<value>"-XX:MaxPermSize=128m"</value>
						</systemProperty>
						<systemProperty>
							<name>JAVA_OPTS</name>
							<value>"-Xms512m -Xmx1024m"</value>
						</systemProperty>
					</systemProperties>
					<webDefaultXml>src/main/resources/webdefault.xml</webDefaultXml>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<additionalProjectnatures>
						<projectnature>
							org.springframework.ide.eclipse.core.springnature
						</projectnature>
					</additionalProjectnatures>
					<additionalBuildcommands>
						<buildcommand>
							org.springframework.ide.eclipse.core.springbuilder
						</buildcommand>
					</additionalBuildcommands>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<wtpversion>1.5</wtpversion>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- <version>2.7.3</version> -->
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
